syntax = "proto3";

package mcp.orchestrator.v1;

import "common.proto";

message CreateSecretRequest {
  string name = 1;
  string namespace = 2;
  map<string, bytes> data = 3;
  SecretType type = 4;
}

message GetSecretRequest {
  string name = 1;
  string namespace = 2;
}

message ListSecretsRequest {
  optional string namespace = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message ListSecretsResponse {
  repeated SecretResponse secrets = 1;
  string next_page_token = 2;
  int32 total_count = 3;
}

message UpdateSecretRequest {
  string name = 1;
  string namespace = 2;
  map<string, bytes> data = 3;
  optional SecretType type = 4;
  SecretUpdateStrategy strategy = 5;
}

message DeleteSecretRequest {
  string name = 1;
  string namespace = 2;
}

message DeleteSecretResponse {
  bool success = 1;
  string message = 2;
}

message SecretResponse {
  string name = 1;
  string namespace = 2;
  SecretType type = 3;
  int64 created_at = 4;
  int64 updated_at = 5;
  repeated string keys = 6;
}
